// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description renders correctly 1`] = `
<DocumentFragment>
  .cache-16130dr {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-16130dr .eu9mc5y1+.eu9mc5y2 {
  margin-top: 16px;
}

.cache-dp1pkk {
  font-weight: 500;
  color: #151a2d;
}

.cache-dp1pkk:after {
  content: ':';
}

.cache-1tykjcc {
  color: #4a4f62;
  margin: 0;
  margin-top: 8px;
}

.cache-5zdete {
  font-variant: none;
}

<dl
    class="eu9mc5y0 cache-16130dr e7ah3bn0"
  >
    <dt
      class="eu9mc5y2 cache-dp1pkk e7ah3bn0"
    >
      Name
    </dt>
    <dd
      class="eu9mc5y1 cache-1tykjcc e7ah3bn0"
    >
      Big instance
    </dd>
    <dt
      class="eu9mc5y2 cache-dp1pkk e7ah3bn0"
    >
      Size
    </dt>
    <dd
      class="eu9mc5y1 cache-1tykjcc e7ah3bn0"
    >
      125 
      <abbr
        class="cache-5zdete elquw7y0"
        title="GigaBytes"
      >
        GB
      </abbr>
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly inline 1`] = `
<DocumentFragment>
  .cache-1y35550 {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-1y35550 .eu9mc5y1+.eu9mc5y2 {
  margin-top: 16px;
}

.cache-1y35550>.eu9mc5y2 {
  float: left;
  clear: left;
  margin-right: 8px;
}

.cache-1y35550>.eu9mc5y1 {
  margin-top: 0;
}

.cache-1y35550 .eu9mc5y1+.eu9mc5y2+.eu9mc5y1 {
  margin-top: 16px;
}

.cache-dp1pkk {
  font-weight: 500;
  color: #151a2d;
}

.cache-dp1pkk:after {
  content: ':';
}

.cache-1tykjcc {
  color: #4a4f62;
  margin: 0;
  margin-top: 8px;
}

.cache-5zdete {
  font-variant: none;
}

<dl
    class="eu9mc5y0 cache-1y35550 e7ah3bn0"
  >
    <dt
      class="eu9mc5y2 cache-dp1pkk e7ah3bn0"
    >
      Name
    </dt>
    <dd
      class="eu9mc5y1 cache-1tykjcc e7ah3bn0"
    >
      Big instance
    </dd>
    <dt
      class="eu9mc5y2 cache-dp1pkk e7ah3bn0"
    >
      Size
    </dt>
    <dd
      class="eu9mc5y1 cache-1tykjcc e7ah3bn0"
    >
      125 
      <abbr
        class="cache-5zdete elquw7y0"
        title="GigaBytes"
      >
        GB
      </abbr>
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly seletable 1`] = `
<DocumentFragment>
  .cache-kae5k1 {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-kae5k1 .eu9mc5y1+.eu9mc5y2 {
  margin-top: 16px;
}

.cache-kae5k1>.eu9mc5y2 {
  float: left;
  clear: left;
  margin-right: 8px;
}

.cache-kae5k1>.eu9mc5y1 {
  margin-top: 0;
}

.cache-kae5k1 .eu9mc5y1+.eu9mc5y2+.eu9mc5y1 {
  margin-top: 16px;
}

.cache-kae5k1>.eu9mc5y1 {
  -webkit-user-select: all;
  -moz-user-select: all;
  -ms-user-select: all;
  user-select: all;
}

.cache-kae5k1>.eu9mc5y1::selection {
  color: #eeeeff;
  background: #4f0599;
}

.cache-dp1pkk {
  font-weight: 500;
  color: #151a2d;
}

.cache-dp1pkk:after {
  content: ':';
}

.cache-1tykjcc {
  color: #4a4f62;
  margin: 0;
  margin-top: 8px;
}

.cache-5zdete {
  font-variant: none;
}

<dl
    class="eu9mc5y0 cache-kae5k1 e7ah3bn0"
  >
    <dt
      class="eu9mc5y2 cache-dp1pkk e7ah3bn0"
    >
      Name
    </dt>
    <dd
      class="eu9mc5y1 cache-1tykjcc e7ah3bn0"
    >
      Big instance
    </dd>
    <dt
      class="eu9mc5y2 cache-dp1pkk e7ah3bn0"
    >
      Size
    </dt>
    <dd
      class="eu9mc5y1 cache-1tykjcc e7ah3bn0"
    >
      125 
      <abbr
        class="cache-5zdete elquw7y0"
        title="GigaBytes"
      >
        GB
      </abbr>
    </dd>
  </dl>
</DocumentFragment>
`;
